--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>my own article</title>
+    <title>My profile</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -12,21 +11,41 @@
   <body>
 
     <div class="container">
-      <div class="banner">
-        <h1>How to copy medium in 10 minutes</h1>
+      <div class="card-white" id="introduction">
+        <h1>Hey, welcome to my profile - I'm Oday and here is my lovely face <img src="https://avatars3.githubusercontent.com/u/71675895?s=460&u=4cabccd4e5d16e3a8ac1ea04339b846cf1cac633&v=4" class="img-circle" width="100px" alt="Oday Abu Saleh">
+        </h1>
         <p>
-          This is a cheap version of course.
+        Anyway to know more about me, click on button below and join the dark side
         </p>
+        <a href="https://www.instagram.com/pal.yoga/" class="btn-blue" target="_blank">Discover my profile</a>
       </div>
-      <div class="container">
-      <h2>Pal Yoga</h2>
-      <p>To be or not to be, be a yoga.</p>
-      <h2>Sepltime</h2>
-      <p>falling in love with 3 steps..step 1 be a man</p>
-      <a href="#">This is how you really do it</a>
-      <h2>It's not easy Brozer</h2>
-      <p>I love you and respect you brozer.</p>
+      <div class="card-white">
+        <h2>Follow me</h2>
+        <ul class="list-inline">
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=100009330803004" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/odayasaleh/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/odayadli" target="_blank">
+             <i class="fab fa-github-square"></i>
+            </a>
+          </li>
+           <li>
+            <a href="https://www.instagram.com/pal.yoga/" target="_blank">
+             <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+
+        </ul>
       </div>
     </div>
+
   </body>
 </html>
